# ecco

./: .gitignore  Dockerfile  Makefile  README.md  bruh  docker-compose.yml  factorial_5  pyproject.toml  scripts  test.c  test1  test11  test5  test6  test7  test9
ecco/: __init__.py  ecco.py  ecco_ast.py
ecco/generation/: __init__.py  clang.py  llvm.py  llvmstackentry.py  llvmvalue.py  symboltable.py  translate.py  types.py
ecco/parsing/: __init__.py  assignment.py  declaration.py  ecco_ast.py  expression.py  expressions.py  optimization.py  statement.py
ecco/scanning/: __init__.py  ecco_scanner.py  ecco_token.py
ecco/utils/: __init__.py  arguments.py  ecco_logging.py
examples/: factorial  opt_test  scan_test_pass  test1  test10  test2  test3  test4  test5  test6  test7  test8  test9  test_arithmetic  test_arrays  test_comparison_operators  test_condition  test_dereference_assignment  test_enum_const  test_factorial  test_function  test_pointers  test_prototypes  test_structs  test_structs_unions  test_variable_reassignment
test/: __init__.py  generate_arithmetic_test.py  test_examples.py  tester.py
