[tool.poetry]
name = "ecco"
version = "0.1.0"
description = "An `Educational C COmpiler` written in Python"
authors = ["Charles Averill <charlesaverill20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ecco = "ecco.ecco:main"
